# fusion-kbd-controller-1

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: data.inc  main.c  set_modes.c  set_modes.h  setup.c  setup.h
util/: build_list_usb.sh  list_usb  list_usb.c
